[package]
name = "connection_string_generator"
version = "0.2.0"
edition = "2021"
authors = ["Thomas Schuster <twihno@gmail.com>"]
license = "MIT"
repository = "https://github.com/twihno/connection-string-generator"
description = """
A VERY simple crate to generate database connection strings programmatically.
"""
readme = "README.md"
keywords = ["database", "database-connection", "connection-string"]
categories = ["database"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"

[features]

default = ["full"]

full = ["postgres", "sqlserver"]

postgres = []
sqlserver = []
